[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
pointproof = { path = "../pointproof"}
ark-std = { version = "0.3.0", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
